syntax = "proto2";
package content;

option java_multiple_files = true;
option java_package = "cl.emilym.gtfs.content";


message Pages {
  repeated Content pages = 1;
}

message Content {
  required string id = 1;
  required string title = 2;
  required string content = 3;
  repeated ExternalLink externalLinks = 4;
  repeated ContentLink contentLinks = 5;
}

message ExternalLink {
  required string title = 1;
  required string url = 2;
}

message ContentLink {
  required string title = 1;
  required string contentId = 2;
}